<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.tik.puyo_simu.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />
    <header
        android:fragment="com.example.tik.puyo_simu.SettingsActivity$DisplayPreferenceFragment"
        android:title="@string/pref_header_display" />

    <header
        android:fragment="com.example.tik.puyo_simu.SettingsActivity$ControlPreferenceFragment"
        android:title="@string/pref_header_control" />

    <header
        android:fragment="com.example.tik.puyo_simu.SettingsActivity$OtherPreferenceFragment"
        android:title="@string/pref_header_other" />

</preference-headers>
