<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ozyamaland"
        android:orderInCategory="100"
        android:title="@string/ozyama_land"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_IPSTweet"
        android:orderInCategory="100"
        android:title="@string/action_IPSTweet"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_About"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
